# firebase

./: README.md  agent_protocol_server.py  cli.py  config.py  configurator.py  file_manager.py  input.py  main.py  pyproject.toml  user_interaction.py  utils.py
action_history/: __init__.py  action_history.py  model.py
agent/: __init__.py  base.py  components.py  forge_agent.py  protocols.py
agent_protocol/: agent.py  agent_test.py  api_router.py  middlewares.py
agent_protocol/database/: __init__.py  db.py  db_test.py
agent_protocol/models/: __init__.py  artifact.py  pagination.py  task.py
agents/: README.md  __init__.py  agent.py
code_executor/: __init__.py  code-executor.py  code_executor.py  test_code_executor.py
command/: __init__.py  command.py  decorator.py  parameter.py
config/: __init__.py  ai_directives.py  ai_profile.py  base.py
file_storage/: __init__.py  base.py  gcs.py  local.py  s3.py  test_gcs_file_storage.py  test_local_file_storage.py  test_s3_file_storage.py
json/: parsing.py  test_parsing.py
lib/: main.dart
lib/constants/: app_colors.dart
lib/models/: chat.dart  message_type.dart  step.dart  step_request_body.dart  task_request_body.dart
lib/services/: auth_service.dart  chat_service.dart  event_source_interface.dart  event_source_service.dart  event_source_service_mobile.dart  event_source_service_web.dart  shared_preferences_service.dart  task_service.dart
lib/utils/: rest_api_utility.dart
lib/viewmodels/: chat_viewmodel.dart  settings_viewmodel.dart  task_queue_viewmodel.dart  web_search_result.dart
lib/views/: main_layout.dart
lib/views/chat/: agent_message_tile.dart  agent_thought_overlay_view.dart  chat_input_field.dart  chat_view.dart  loading_indicator.dart  user_message_tile.dart  web_search_dialog.dart
lib/views/side_bar/: side_bar_view.dart
lib/views/task/: new_task_button.dart  task_list_tile.dart  task_view.dart  test_suite_detail_view.dart
lib/views/task_queue/: task_queue_view.dart
llm/prompting/: base.py  schema.py  utils.py
llm/providers/: __init__.py  _openai_base.py  anthropic.py  groq.py  multi.py  openai.py  openai_provider.py  schema.py  utils.py
llm/providers/llamafile/: README.md  __init__.py  llamafile.py
system/: __init__.py  system.py
web/: __init__.py  flutter_bootstrap.js  google_cse.py  index.html  main.dart.js  run_with_components.py  search.py  selenium.py  test_search.py  test_selenium.py  web_browser.py  webpage_reader.py  wwworkingselenium.py
